<resources>
    <string name="app_name">SpaceDIM</string>
    <string name="mainMenuText">Login to play</string>
    <string name="SpaceTeamText">DIM Space Team</string>
    <string name="usernameField">Username</string>
    <string name="button">Button</string>
    <string name="register">Register</string>
    <string name="launch">Launch</string>
    <string name="waiting_room">Waiting Room</string>
    <string name="socket_inactive">Socket Inactive</string>
    <string name="enter_a_room_name_to_join_or_create_one_yourself">Enter a room name to join, or create one yourself...</string>
    <string name="join_a_game">Join a game</string>
    <string name="room_name">room name</string>
    <string name="todo">TODO</string>
    <string name="game_over">Game Over</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="your_score_is">Your Score is :</string>
    <string name="next">Next</string>
    <string name="next">Next</string>
    <string name="game">Game</string>
    <string name="gaz">Gaz</string>
    <string name="oxygen">Oxygen</string>
    <string name="allumer_moteurs">Allumer Moteurs</string>
    <string name="random">Random</string>
    <string name="next">Next</string>
</resources>