<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/gamingRoomTopText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game" />

        <Switch
            android:id="@+id/gamingRoomGame1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:minHeight="48dp"
            android:text="@string/gaz" />

        <Switch
            android:id="@+id/gamingRoomGame2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/oxygen" />

        <Button
            android:id="@+id/gamingRoomGame3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allumer_moteurs" />

        <Button
            android:id="@+id/gamingRoomGame4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random" />

        <Button
            android:id="@+id/gamingRoomNextRoomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginTop="400dp"
            android:text="@string/next" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>