<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/waitingRoomTopText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/waiting_room" />

        <ImageView
            android:id="@+id/waitingRoomImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/waitingRoomWaitingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/enter_a_room_name_to_join_or_create_one_yourself" />

        <Switch
            android:id="@+id/waitingRoomSocketSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="40dp"
            android:enabled="false"
            android:minHeight="48dp"
            android:text="@string/socket_inactive" />

        <Button
            android:id="@+id/waitingRoomJoinGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="50dp"
            android:text="@string/join_a_game" />

        <TextView
            android:id="@+id/waitingRoomRoomNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="160dp"
            android:paddingRight="160dp"
            android:text="@string/room_name" />

        <Button
            android:id="@+id/WaitingRoomNextRoomButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="300dp"
            android:layout_weight="1"
            android:text="@string/next" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>