<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/loginRoomTopText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mainMenuText" />

        <TextView
            android:id="@+id/loginRoomCentralText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:paddingLeft="150dp"
            android:paddingRight="150dp"
            android:text="@string/SpaceTeamText" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:textColorHint="@color/purple_200">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginRoomUsername"
                android:layout_width="241dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:hint="@string/usernameField"
                android:textColor="@color/purple_700"
                tools:ignore="TextContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/loginRoomRegisterButton"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register" />

                <Button
                    android:id="@+id/loginRoomLaunchButton"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/launch" />

                <Button
                    android:id="@+id/LoginRoomNextRoomButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="300dp"
                    android:layout_weight="1"
                    android:text="@string/next" />

            </LinearLayout>


        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>